# wxWidgetsTemplate_CMAKE

./: .gitignore  CMakeLists.txt  README.txt
res/: forms.fbp
src/: images.h  main.cpp
